Tercera Entrega del Proyecto Final

--- a/Pages/Dibujantes.html
+++ b/Pages/Dibujantes.html
@@ -59,12 +59,8 @@
                         <div class="col-md-8">
                             <div class="card-body">
                                 <h5 class="card-title">Dave McKean</h5>
-                                <p class="card-text">Nacido en Maidenhead, Inglaterra, el 10 de noviembre de 1963 y es
-                                    uno de los más renombrados ilustradores y diseñadores de Gran Bretaña y el mundo
-                                    entero. Su poder creativo y artístico deslumbra a todos los amantes del diseño y la
-                                    ilustración. Es además fotógrafo, músico y un incipiente director de cine.</p>
-                                <p class="card-text"><small class="text-muted">Obras notables: Orquídea Negra, Arkham
-                                        Asylum: A Serious House on Serious Earth, The Sandman (portadas).</small></p>
+                                <p class="card-text">Nacido en Maidenhead, Inglaterra, el 10 de noviembre de 1963 y es uno de los más renombrados ilustradores y diseñadores de Gran Bretaña y el mundo entero. Su poder creativo y artístico deslumbra a todos los amantes del diseño y la ilustración. Es además fotógrafo, músico y un incipiente director de cine.</p>
+                                <p class="card-text"><small class="text-muted">Obras notables: Orquídea Negra, Arkham Asylum: A Serious House on Serious Earth, The Sandman (portadas).</small></p>
                             </div>
                         </div>
                         <div class="col-md-4">
@@ -138,7 +134,7 @@
                         <div class="col-md-8">
                             <div class="card-body">
                                 <h5 class="card-title">Pia Guerra</h5>
-                                <p class="card-text">Pia Jasmin Guerra, es una dibujante de cómics canadiense conocida principalmente por su trabajo como creadora y dibujante de Y: El último hombre.​</p>
+                                <p class="card-text">Pia Jasmin Guerra, es una dibujante de cómics canadiense conocida principalmente por su trabajo como creadora y dibujante de Y: El último hombre. Pia Guerra ha trabajado en varios títulos independientes como Bikini Assassin Team, Sinnamon, The Bruiser o The Big Book of Urban Legends, entre otros.​</p>
                                 <p class="card-text"><small class="text-muted">Premios: Eisner Award for Best Artist/Penciler/Inker, Eisner Award for Best Continuing Series</small></p>
                             </div>
                         </div>
