--- a/Pages/Guionistas.html
+++ b/Pages/Guionistas.html
@@ -83,11 +83,45 @@
                         <div class="col-md-8">
                             <div class="card-body">
                                 <h5 class="card-title">Neil Gaiman</h5>
-                                <p class="card-text">Neil Richard Gaiman, autor de ficción, novelas, cómics, novelas
-                                    gráficas, no ficción, teatro de audio, películas e historietas y escritor británico.
-                                    Cultiva el género fantástico.</p>
-                                <p class="card-text"><small class="text-muted">Sus obras incluyen la serie de cómics The
-                                        Sandman y novelas Stardust, Coraline y El libro del Cementerio.</small></p>
+                                <p class="card-text">Neil Richard Gaiman, autor de ficción, novelas, cómics, novelas gráficas, no ficción, teatro de audio, películas e historietas y escritor británico. Cultiva el género fantástico.</p>
+                                <p class="card-text"><small class="text-muted">Sus obras incluyen la serie de cómics The Sandman y novelas Stardust, Coraline y El libro del Cementerio.</small></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </article>
+            <!-- BRIAN AZZARELLO -->
+            <article class="col guionista">
+                <div class="card mb-3 mt-3" style="max-width: 540px;">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <div id="carouselExampleFade4" class="carousel slide carousel-fade" data-bs-ride="carousel">
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                        <img src="../assets/img/Azzarello01.jpeg" class="d-block w-100" alt="Azzarello01">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="../assets/img/Azzarello02.jpeg" class="d-block w-100" alt="Azzarello02">
+                                    </div>
+                                </div>
+                                <button class="carousel-control-prev" type="button"
+                                    data-bs-target="#carouselExampleFade4" data-bs-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Previous</span>
+                                </button>
+                                <button class="carousel-control-next" type="button"
+                                    data-bs-target="#carouselExampleFade4" data-bs-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Next</span>
+                                </button>
+                            </div>
+                        </div>
+                        <!--Info. del artista-->
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">Brian Azzarello</h5>
+                                <p class="card-text">Es un escritor estadounidense de Cómics afamado por sus trabajos en la editorial Vertigo, y por sus colaboraciones con dibujantes argentinos como Eduardo Risso y Marcelo Frusin.</p>
+                                <p class="card-text"><small class="text-muted">Es especialmente reconocido por la historieta 100 Balas para el sello Vertigo, editorial adulta de DC.</small></p>
                             </div>
                         </div>
                     </div>
@@ -160,43 +194,6 @@
                                 <h5 class="card-title">Brian K. Vaughan</h5>
                                 <p class="card-text">Es un guionista de cómic estadounidense conocido por sus trabajos en Y: El último hombre, Ex Machina, Runaways, Los Leones de Bagdad, The Private Eye y Saga.</p>
                                 <p class="card-text"><small class="text-muted">Premio Hugo a la Mejor Historia Gráfica.</small></p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </article>
-            <!-- BRIAN AZZARELLO -->
-            <article class="col guionista">
-                <div class="card mb-3 mt-3" style="max-width: 540px;">
-                    <div class="row g-0">
-                        <div class="col-md-4">
-                            <div id="carouselExampleFade4" class="carousel slide carousel-fade" data-bs-ride="carousel">
-                                <div class="carousel-inner">
-                                    <div class="carousel-item active">
-                                        <img src="../assets/img/Azzarello01.jpeg" class="d-block w-100" alt="Azzarello01">
-                                    </div>
-                                    <div class="carousel-item">
-                                        <img src="../assets/img/Azzarello02.jpeg" class="d-block w-100" alt="Azzarello02">
-                                    </div>
-                                </div>
-                                <button class="carousel-control-prev" type="button"
-                                    data-bs-target="#carouselExampleFade4" data-bs-slide="prev">
-                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                    <span class="visually-hidden">Previous</span>
-                                </button>
-                                <button class="carousel-control-next" type="button"
-                                    data-bs-target="#carouselExampleFade4" data-bs-slide="next">
-                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                    <span class="visually-hidden">Next</span>
-                                </button>
-                            </div>
-                        </div>
-                        <!--Info. del artista-->
-                        <div class="col-md-8">
-                            <div class="card-body">
-                                <h5 class="card-title">Brian Azzarello</h5>
-                                <p class="card-text">Es un escritor estadounidense de Cómics afamado por sus trabajos en la editorial Vertigo, y por sus colaboraciones con dibujantes argentinos como Eduardo Risso y Marcelo Frusin.</p>
-                                <p class="card-text"><small class="text-muted">Es especialmente reconocido por la historieta 100 Balas para el sello Vertigo, editorial adulta de DC.</small></p>
                             </div>
                         </div>
                     </div>
