sticky navbar+grid en Series

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header>
         <!-- Solo en index, Luciens Library es Titulo H1, SEO -->
         <!-- nav -->
-        <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-navbar">
             <div class="container-fluid">
                 <h1 class="h1-index"><a class="navbar-brand" href="./index.html">Lucien's Library</a></h1>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
