--- a/Pages/Dibujantes.html
+++ b/Pages/Dibujantes.html
@@ -19,7 +19,7 @@
 <body class="d-flex flex-column h-100 bg-light">
     <header>
         <!-- nav -->
-        <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-navbar">
             <div class="container-fluid">
                 <a class="navbar-brand" href="../index.html">Lucien's Library</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
