--- a/Pages/Series.html
+++ b/Pages/Series.html
@@ -19,7 +19,7 @@
 <body class="d-flex flex-column h-100 bg-light">
     <header>
         <!-- nav -->
-        <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-navbar">
             <div class="container-fluid">
                 <a class="navbar-brand" href="../index.html">Lucien's Library</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -49,6 +49,7 @@
     <main class="container">
       <!-- Titulo de la pagina, Series -->
       <h1 class="mt-3"><span class="fade-mine__content">Series</span></h1>
+      <div class="grid-mine">
       <!-- Sandman -->
       <article class="serie">
         <h2 class="serie__titulo">The Sandman</h2>
@@ -78,14 +79,16 @@
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Next</span>
             </button>
-          </div>
-          <!-- /carrusel de tapas de la serie -->
+        </div>
+        <!-- /carrusel de tapas de la serie -->
+        <div>
           <!--Info. de la serie-->
           <ul class="list-unstyled serie__desc">
               <li><p>Sandman, para empezar, es la colección de comics más unánimemente aclamada por crítica y público en los últimos años y considerada la más importante contribución de la década de los 90 al noveno arte. En ella, su guionista Neil Gaiman nos presenta a Sueño, un ser más allá de un Dios, conocido por los griegos como Morfeo y cuyo mito de poner arena en tus ojos cuando duermes viene a dar título a la colección. Así entendido, Sueño es la representación humana de esa parte oculta de la existencia que discurre paralela a la vigilia y que no es sino el sueño propiamente dicho, la fantasía si lo preferís. Sin embargo, Sueño no es único en su especie y pertenece a una antigua familia anterior aún al Universo, los Eternos, compuesta por 7 hermanos, por orden de edad los siguientes: Destino, Muerte, Sueño, Destrucción, Deseo, Desespero y Delirio.</p></li>
               <li><p><b>Guion:</b> Neil Gaiman</p></li>
               <li><p><b>Dibujo:</b> Dave McKean</p></li>
           </ul>
+        </div>
       </article>
       <!-- 100 Balas -->
       <article class="serie">
@@ -201,6 +204,7 @@
               <li><p><b>Dibujo:</b> Darick Robertson</p></li>
           </ul>
       </article>
+    </div>
     </main>
     <!-- /main -->
 
