Entrega del Proyecto Final

--- a/Pages/Guionistas.html
+++ b/Pages/Guionistas.html
@@ -50,10 +50,11 @@
         <!-- Titulo de la pagina, Guionistas -->
         <h1 class="mt-3"><span class="fade-mine__content">Guionistas</span></h1>
         <!-- cards de guionistas -->
-        <div class="row row-cols-1 row-cols-md-2">
+        <!-- <div class="row row-cols-1 row-cols-md-2"> -->
+        <div class="grid-mine">
             <!-- NEIL GAIMAN -->
             <article class="col guionista">
-                <div class="card mb-3 mt-3" style="max-width: 540px;">
+                <div class="card mb-3 mt-3">
                     <div class="row g-0">
                         <div class="col-md-4">
                             <div id="carouselExampleFade1" class="carousel slide carousel-fade" data-bs-ride="carousel">
@@ -83,7 +84,7 @@
                         <div class="col-md-8">
                             <div class="card-body">
                                 <h5 class="card-title">Neil Gaiman</h5>
-                                <p class="card-text">Neil Richard Gaiman, autor de ficción, novelas, cómics, novelas gráficas, no ficción, teatro de audio, películas e historietas y escritor británico. Cultiva el género fantástico.</p>
+                                <p class="card-text text-justify-mine">Neil Richard Gaiman, autor de ficción, novelas, cómics, novelas gráficas, no ficción, teatro de audio, películas e historietas y escritor británico. Cultiva el género fantástico.</p>
                                 <p class="card-text"><small class="text-muted">Sus obras incluyen la serie de cómics The Sandman y novelas Stardust, Coraline y El libro del Cementerio.</small></p>
                             </div>
                         </div>
@@ -92,7 +93,7 @@
             </article>
             <!-- BRIAN AZZARELLO -->
             <article class="col guionista">
-                <div class="card mb-3 mt-3" style="max-width: 540px;">
+                <div class="card mb-3 mt-3">
                     <div class="row g-0">
                         <div class="col-md-4">
                             <div id="carouselExampleFade4" class="carousel slide carousel-fade" data-bs-ride="carousel">
@@ -120,7 +121,7 @@
                         <div class="col-md-8">
                             <div class="card-body">
                                 <h5 class="card-title">Brian Azzarello</h5>
-                                <p class="card-text">Es un escritor estadounidense de Cómics afamado por sus trabajos en la editorial Vertigo, y por sus colaboraciones con dibujantes argentinos como Eduardo Risso y Marcelo Frusin.</p>
+                                <p class="card-text text-justify-mine">Es un escritor estadounidense de Cómics afamado por sus trabajos en la editorial Vertigo, y por sus colaboraciones con dibujantes argentinos como Eduardo Risso y Marcelo Frusin.</p>
                                 <p class="card-text"><small class="text-muted">Es especialmente reconocido por la historieta 100 Balas para el sello Vertigo, editorial adulta de DC.</small></p>
                             </div>
                         </div>
@@ -129,7 +130,7 @@
             </article>
             <!-- WARREN ELLIS -->
             <article class="col guionista">
-                <div class="card mb-3 mt-3" style="max-width: 540px;">
+                <div class="card mb-3 mt-3">
                     <div class="row g-0">
                         <div class="col-md-4">
                             <div id="carouselExampleFade2" class="carousel slide carousel-fade" data-bs-ride="carousel">
@@ -156,7 +157,7 @@
                         <div class="col-md-8">
                             <div class="card-body">
                                 <h5 class="card-title">Warren Ellis</h5>
-                                <p class="card-text">Es guionista de cómics, pero también ha escrito novelas, ha colaborado en videojuegos y creado guiones para televisión. </p>
+                                <p class="card-text text-justify-mine">Es guionista de cómics, pero también ha escrito novelas, ha colaborado en videojuegos y creado guiones para televisión. </p>
                                 <p class="card-text"><small class="text-muted">Sus obras incluyen Transmetropolitan, Global Frequency, Planetary, Nextwave.</small></p>
                             </div>
                         </div>
@@ -165,7 +166,7 @@
             </article>
             <!-- BRIAN K VAUGHAM -->
             <article class="col guionista">
-                <div class="card mb-3 mt-3" style="max-width: 540px;">
+                <div class="card mb-3 mt-3">
                     <div class="row g-0">
                         <div class="col-md-4">
                             <div id="carouselExampleFade3" class="carousel slide carousel-fade" data-bs-ride="carousel">
@@ -192,7 +193,7 @@
                         <div class="col-md-8">
                             <div class="card-body">
                                 <h5 class="card-title">Brian K. Vaughan</h5>
-                                <p class="card-text">Es un guionista de cómic estadounidense conocido por sus trabajos en Y: El último hombre, Ex Machina, Runaways, Los Leones de Bagdad, The Private Eye y Saga.</p>
+                                <p class="card-text text-justify-mine">Es un guionista de cómic estadounidense conocido por sus trabajos en Y: El último hombre, Ex Machina, Runaways, Los Leones de Bagdad, The Private Eye y Saga.</p>
                                 <p class="card-text"><small class="text-muted">Premio Hugo a la Mejor Historia Gráfica.</small></p>
                             </div>
                         </div>
