--- a/Pages/Tienda.html
+++ b/Pages/Tienda.html
@@ -53,7 +53,7 @@
             compra.</p>
         <!-- Formulario de contacto -->
         <h2 class="mb-3 h5">Formulario de contacto</h2>
-        <form class="row g-3 form-mine mb-2">
+        <form class="row g-3 form-mine">
             <div class="col-md-6">
                 <label for="inputName" class="form-label">Nombre</label>
                 <input type="text" class="form-control field-mine" id="inputName" placeholder="Escriba su Nombre"
