--- a/Pages/Dibujantes.html
+++ b/Pages/Dibujantes.html
@@ -50,16 +50,17 @@
         <!-- Titulo de la pagina, Dibujantes -->
         <h1 class="mt-3"><span class="fade-mine__content">Dibujantes</span></h1>
         <!-- cards de Dibujantes -->
-        <div class="row row-cols-1 row-cols-md-2">
+        <!-- <div class="row row-cols-1 row-cols-md-2"> -->
+        <div class="grid-mine">
             <!-- invertimos el orden de las inpares para probar, igual solo se ve bien en desktop-->
             <!-- DAVE MCKEAN -->
             <article class="col dibujante">
-                <div class="card mb-3 mt-3" style="max-width: 540px;">
+                <div class="card mb-3 mt-3">
                     <div class="row g-0">
                         <div class="col-md-8">
                             <div class="card-body">
                                 <h5 class="card-title">Dave McKean</h5>
-                                <p class="card-text">Nacido en Maidenhead, Inglaterra, el 10 de noviembre de 1963 y es uno de los más renombrados ilustradores y diseñadores de Gran Bretaña y el mundo entero. Su poder creativo y artístico deslumbra a todos los amantes del diseño y la ilustración. Es además fotógrafo, músico y un incipiente director de cine.</p>
+                                <p class="card-text text-justify-mine">Nacido en Maidenhead, Inglaterra, el 10 de noviembre de 1963 y es uno de los más renombrados ilustradores y diseñadores de Gran Bretaña y el mundo entero. Su poder creativo y artístico deslumbra a todos los amantes del diseño y la ilustración. Es además fotógrafo, músico y un incipiente director de cine.</p>
                                 <p class="card-text"><small class="text-muted">Obras notables: Orquídea Negra, Arkham Asylum: A Serious House on Serious Earth, The Sandman (portadas).</small></p>
                             </div>
                         </div>
@@ -93,7 +94,7 @@
             </article>
             <!-- EDUEARDO RISSO -->
             <article class="col dibujante">
-                <div class="card mb-3 mt-3" style="max-width: 540px;">
+                <div class="card mb-3 mt-3">
                     <div class="row g-0">
                         <div class="col-md-4">
                             <div id="carouselExampleFade2" class="carousel slide carousel-fade" data-bs-ride="carousel">
@@ -120,7 +121,7 @@
                         <div class="col-md-8">
                             <div class="card-body">
                                 <h5 class="card-title">Eduardo Risso</h5>
-                                <p class="card-text">Es un dibujante e historietista argentino. Es uno de los más destacados artistas de su medio tanto en su país - donde son famosas sus obras junto a Carlos Trillo - como en Europa, y principalmente en Estados Unidos, donde ha obtenido un amplio reconocimiento por sus trabajos junto a Brian Azzarello.</p>
+                                <p class="card-text text-justify-mine">Es un dibujante e historietista argentino. Es uno de los más destacados artistas de su medio tanto en su país - donde son famosas sus obras junto a Carlos Trillo - como en Europa, y principalmente en Estados Unidos, donde ha obtenido un amplio reconocimiento por sus trabajos junto a Brian Azzarello.</p>
                                 <p class="card-text"><small class="text-muted">Obras notables: 100 Balas; Batman: Broken City.</small></p>
                             </div>
                         </div>
@@ -129,12 +130,12 @@
             </article>
             <!-- PIA GUERRA -->
             <article class="col dibujante">
-                <div class="card mb-3 mt-3" style="max-width: 540px;">
+                <div class="card mb-3 mt-3">
                     <div class="row g-0">
                         <div class="col-md-8">
                             <div class="card-body">
                                 <h5 class="card-title">Pia Guerra</h5>
-                                <p class="card-text">Pia Jasmin Guerra, es una dibujante de cómics canadiense conocida principalmente por su trabajo como creadora y dibujante de Y: El último hombre. Pia Guerra ha trabajado en varios títulos independientes como Bikini Assassin Team, Sinnamon, The Bruiser o The Big Book of Urban Legends, entre otros.​</p>
+                                <p class="card-text text-justify-mine">Pia Jasmin Guerra, es una dibujante de cómics canadiense conocida principalmente por su trabajo como creadora y dibujante de Y: El último hombre. Pia Guerra ha trabajado en varios títulos independientes como Bikini Assassin Team, Sinnamon, The Bruiser o The Big Book of Urban Legends, entre otros.​</p>
                                 <p class="card-text"><small class="text-muted">Premios: Eisner Award for Best Artist/Penciler/Inker, Eisner Award for Best Continuing Series</small></p>
                             </div>
                         </div>
@@ -165,7 +166,7 @@
             </article>
             <!-- DARRICK ROBERTSON -->
             <article class="col dibujante">
-                <div class="card mb-3 mt-3" style="max-width: 540px;">
+                <div class="card mb-3 mt-3">
                     <div class="row g-0">
                         <div class="col-md-4">
                             <div id="carouselExampleFade4" class="carousel slide carousel-fade" data-bs-ride="carousel">
@@ -192,7 +193,7 @@
                         <!--Info. del artista-->
                         <div class="col-md-8">
                             <div class="card-body">
-                                <h5 class="card-title">Darick W. Robertson</h5>
+                                <h5 class="card-title text-justify-mine">Darick W. Robertson</h5>
                                 <p class="card-text">Es un artista estadounidense mejor conocido por su trabajo como ilustrador de cómics en series que co-creó, especialmente Transmetropolitan y The Boys. Robertson ha ilustrado cientos de cómics en sus más de veinte años en la industria.</p>
                                 <p class="card-text"><small class="text-muted">Obras notables: Space Beaver, Transmetropolitan, Punisher: Born, Wolverine, The Boys, "HAPPY!"</small></p>
                             </div>
